--- a/tests/IO/CMakeLists.txt
+++ b/tests/IO/CMakeLists.txt
@@ -6,16 +6,17 @@ CONFIGURE_FILE(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
 
 
 SET(TESTS_IO_SRC
-  testFontIO
+  testFontIO.cpp
   )
 
 FOREACH(FILE ${TESTS_IO_SRC})
-  add_executable(${FILE} ${FILE})
-  target_include_directories(${FILE} PRIVATE ${FRAMEWORK_INCLUDE_DIRS} ${CATCH_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
-  target_link_libraries (${FILE} DocCreatorFramework)
-  set_target_properties(${FILE} PROPERTIES CXX_STANDARD 11
+  get_filename_component(TRGT ${FILE} NAME_WE)
+  add_executable(${TRGT} ${FILE})
+  target_include_directories(${TRGT} PRIVATE ${FRAMEWORK_INCLUDE_DIRS} ${CATCH_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
+  target_link_libraries (${TRGT} DocCreatorFramework)
+  set_target_properties(${TRGT} PROPERTIES CXX_STANDARD 11
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
     )
-  add_test(${FILE} ${FILE})
+  add_test(${TRGT} ${TRGT})
 ENDFOREACH(FILE)
