update to Leptonica 1.82.0 and Tesseract 5.2.0

--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -47,8 +47,8 @@ IF(BUILD_TESSERACT)
   
   message(STATUS "Will download and build leptonica and tesseract from sources")
 
-  SET(LEPTONICA_VERSION 1.81.0)
-  SET(TESSERACT_VERSION 50)
+  SET(LEPTONICA_VERSION 1.82.0)
+  SET(TESSERACT_VERSION 52)
   #SET(TESSERACT_ARCHIVE_VERSION 4.1.1)
   #SET(LEPTONICA_SRC_DIR "${PROJECT_SOURCE_DIR}/thirdparty/leptonica-${LEPTONICA_VERSION}")
   #SET(TESSERACT_SRC_DIR "${PROJECT_SOURCE_DIR}/thirdparty/tesseract-${TESSERACT_ARCHIVE_VERSION}")
@@ -144,7 +144,8 @@ IF(BUILD_TESSERACT)
   ExternalProject_Add(leptonica
     # URL ${LEPTONICA_SRC_DIR}
     GIT_REPOSITORY https://github.com/DanBloomberg/leptonica.git
-    GIT_TAG 5ad7a0a3adcfa8944c082732b69b733917a54242
+    #GIT_TAG 5ad7a0a3adcfa8944c082732b69b733917a54242
+    GIT_TAG f4138265b390f1921b9891d6669674d3157887d8  #1.82.0
     PREFIX ${PROJECT_BINARY_DIR}/leptonica
     # PATCH_COMMAND patch -p0 < ${PROJECT_SOURCE_DIR}/thirdparty/leptonica-1.80.0.patch
     CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/leptonica -DSTATIC=ON -DSW_BUILD=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
@@ -187,10 +188,12 @@ IF(BUILD_TESSERACT)
     DEPENDS leptonica
     #URL ${TESSERACT_SRC_DIR}
     GIT_REPOSITORY https://github.com/tesseract-ocr/tesseract.git
-    GIT_TAG 8081cae82ee5649cf28a61533aeedee2b4ce4964
+    #GIT_TAG 8081cae82ee5649cf28a61533aeedee2b4ce4964
+    GIT_TAG 5ad5325a0aa8effc47ca033625b6a51682f82767 #5.2.0
     PREFIX ${PROJECT_BINARY_DIR}/tesseract
-    #CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DLeptonica_DIR=${install_dir}/cmake -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/tesseract -DSTATIC=ON -DBUILD_TRAINING_TOOLS=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${ADDITIONAL_FLAG}
-    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DLeptonica_DIR=${install_dir}/lib/cmake -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/tesseract -DSTATIC=ON -DSW_BUILD=OFF -DBUILD_TRAINING_TOOLS=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${ADDITIONAL_FLAG}
+    ##CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DLeptonica_DIR=${install_dir}/cmake -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/tesseract -DSTATIC=ON -DBUILD_TRAINING_TOOLS=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${ADDITIONAL_FLAG}
+    #CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DLeptonica_DIR=${install_dir}/lib/cmake -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/tesseract -DSTATIC=ON -DSW_BUILD=OFF -DBUILD_TRAINING_TOOLS=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${ADDITIONAL_FLAG}
+    CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DLeptonica_DIR=${install_dir}/lib/cmake/leptonica -DPKG_CONFIG_EXECUTABLE="" -DLeptonica_FOUND=TRUE -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}/tesseract -DSTATIC=ON -DSW_BUILD=OFF -DBUILD_TRAINING_TOOLS=OFF -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} ${ADDITIONAL_FLAG}
     BUILD_BYPRODUCTS ${TESSERACT_LIBRARY}
     )
 
