--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -250,9 +250,17 @@ IF(BUILD_TESSERACT)
       #SET(OTHER_LIBS "${WEBP_LIBRARIES};${OTHER_LIBS}")
       #message("WEBP_FOUND=${WEBP_FOUND} by pkg: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
     ENDIF()
+
+    set(MINIMUM_WEBPMUX_VERSION 0.5.0)
+    pkg_check_modules(WEBPMUX libwebpmux>=${MINIMUM_WEBPMUX_VERSION} QUIET)
+    IF(WEBPMUX_FOUND)
+      #SET(OTHER_LIBS "${WEBPMUX_LIBRARIES};${OTHER_LIBS}")
+      #message("WEBP_FOUND=${WEBPMUX_FOUND} by pkg: $WEBPMUX_LIBRARY=${WEBPMUX_LIBRARY} $WEBPMUX_LIBRARIES=${WEBPMUX_LIBRARIES} WEBPMUX=${WEBPMUX}")
+    ENDIF()
+
     pkg_check_modules(JP2K QUIET libopenjp2)
     IF(JP2K_FOUND)
-      # message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${WEBP_LIBRARY} $JP2K_LIBRARIES=${WEBP_LIBRARIES} JP2K=${JP2K}")
+      message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K_LINK_LIBRARIES=${JP2K_LINK_LIBRARIES} JP2K=${JP2K}")
       #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
       SET(OTHER_LIBS "${JP2K_LINK_LIBRARIES};${OTHER_LIBS}") #circleci/macos 22/04/2022
     ENDIF()
@@ -271,6 +279,17 @@ IF(BUILD_TESSERACT)
     find_path(JP2K_INCLUDE_DIR /openjpeg-2.3/openjpeg.h)
     find_library(JP2K_LIBRARY NAMES openjp2)
     if (JP2K_INCLUDE_DIR AND JP2K_LIBRARY)
+      message("JP2K_FOUND=${JP2K_FOUND} for 2.3: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K_LINK_LIBRARIES=${JP2K_LINK_LIBRARIES} JP2K=${JP2K}")    
+      # message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
+      set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
+    endif()
+  endif()
+  if(NOT JP2K)
+    #message("search jp2k directly")
+    find_path(JP2K_INCLUDE_DIR /openjpeg-2.4/openjpeg.h)
+    find_library(JP2K_LIBRARY NAMES openjp2)
+    if (JP2K_INCLUDE_DIR AND JP2K_LIBRARY)
+      message("JP2K_FOUND=${JP2K_FOUND} for 2.4: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K_LINK_LIBRARIES=${JP2K_LINK_LIBRARIES} JP2K=${JP2K}")    
       # message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
       set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
     endif()
