--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             brew install cmake
             brew install opencv
             brew deps opencv
-            brew uninstall -f openjpeg
+            brew uninstall --ignore-dependencies openjpeg
       - run:
           name: Clone repository
           command: git clone $CIRCLE_REPOSITORY_URL -b $CIRCLE_BRANCH
